# serializer version: 1
# name: test_diagnostics[HWE-P1]
  dict({
    'data': dict({
      'data': dict({
        'active_current_l1_a': -4,
        'active_current_l2_a': 2,
        'active_current_l3_a': 0,
        'active_frequency_hz': 50,
        'active_liter_lpm': 12.345,
        'active_power_average_w': 123.0,
        'active_power_l1_w': -123,
        'active_power_l2_w': 456,
        'active_power_l3_w': 123.456,
        'active_power_w': -123,
        'active_tariff': 2,
        'active_voltage_l1_v': 230.111,
        'active_voltage_l2_v': 230.222,
        'active_voltage_l3_v': 230.333,
        'any_power_fail_count': 4,
        'external_devices': None,
        'gas_timestamp': '2021-03-14T11:22:33',
        'gas_unique_id': '**REDACTED**',
        'long_power_fail_count': 5,
        'meter_model': 'ISKRA  2M550T-101',
        'monthly_power_peak_timestamp': '2023-01-01T08:00:10',
        'monthly_power_peak_w': 1111.0,
        'smr_version': 50,
        'total_energy_export_kwh': 13086.777,
        'total_energy_export_t1_kwh': 4321.333,
        'total_energy_export_t2_kwh': 8765.444,
        'total_energy_export_t3_kwh': 8765.444,
        'total_energy_export_t4_kwh': 8765.444,
        'total_energy_import_kwh': 13779.338,
        'total_energy_import_t1_kwh': 10830.511,
        'total_energy_import_t2_kwh': 2948.827,
        'total_energy_import_t3_kwh': 2948.827,
        'total_energy_import_t4_kwh': 2948.827,
        'total_gas_m3': 1122.333,
        'total_liter_m3': 1234.567,
        'unique_meter_id': '**REDACTED**',
        'voltage_sag_l1_count': 1,
        'voltage_sag_l2_count': 2,
        'voltage_sag_l3_count': 3,
        'voltage_swell_l1_count': 4,
        'voltage_swell_l2_count': 5,
        'voltage_swell_l3_count': 6,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength': 100,
      }),
      'device': dict({
        'api_version': 'v1',
        'firmware_version': '4.19',
        'product_name': 'P1 meter',
        'product_type': 'HWE-P1',
        'serial': '**REDACTED**',
      }),
      'state': None,
      'system': dict({
        'cloud_enabled': True,
      }),
    }),
    'entry': dict({
      'ip_address': '**REDACTED**',
      'product_name': 'Product name',
      'product_type': 'product_type',
      'serial': '**REDACTED**',
    }),
  })
# ---
# name: test_diagnostics[HWE-SKT]
  dict({
    'data': dict({
      'data': dict({
        'active_current_l1_a': None,
        'active_current_l2_a': None,
        'active_current_l3_a': None,
        'active_frequency_hz': None,
        'active_liter_lpm': None,
        'active_power_average_w': None,
        'active_power_l1_w': 1457.277,
        'active_power_l2_w': None,
        'active_power_l3_w': None,
        'active_power_w': 1457.277,
        'active_tariff': None,
        'active_voltage_l1_v': None,
        'active_voltage_l2_v': None,
        'active_voltage_l3_v': None,
        'any_power_fail_count': None,
        'external_devices': None,
        'gas_timestamp': None,
        'gas_unique_id': None,
        'long_power_fail_count': None,
        'meter_model': None,
        'monthly_power_peak_timestamp': None,
        'monthly_power_peak_w': None,
        'smr_version': None,
        'total_energy_export_kwh': None,
        'total_energy_export_t1_kwh': 0,
        'total_energy_export_t2_kwh': None,
        'total_energy_export_t3_kwh': None,
        'total_energy_export_t4_kwh': None,
        'total_energy_import_kwh': None,
        'total_energy_import_t1_kwh': 63.651,
        'total_energy_import_t2_kwh': None,
        'total_energy_import_t3_kwh': None,
        'total_energy_import_t4_kwh': None,
        'total_gas_m3': None,
        'total_liter_m3': None,
        'unique_meter_id': None,
        'voltage_sag_l1_count': None,
        'voltage_sag_l2_count': None,
        'voltage_sag_l3_count': None,
        'voltage_swell_l1_count': None,
        'voltage_swell_l2_count': None,
        'voltage_swell_l3_count': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength': 94,
      }),
      'device': dict({
        'api_version': 'v1',
        'firmware_version': '3.03',
        'product_name': 'Energy Socket',
        'product_type': 'HWE-SKT',
        'serial': '**REDACTED**',
      }),
      'state': dict({
        'brightness': 255,
        'power_on': True,
        'switch_lock': False,
      }),
      'system': dict({
        'cloud_enabled': True,
      }),
    }),
    'entry': dict({
      'ip_address': '**REDACTED**',
      'product_name': 'Product name',
      'product_type': 'product_type',
      'serial': '**REDACTED**',
    }),
  })
# ---
# name: test_diagnostics[SDM230]
  dict({
    'data': dict({
      'data': dict({
        'active_current_l1_a': None,
        'active_current_l2_a': None,
        'active_current_l3_a': None,
        'active_frequency_hz': None,
        'active_liter_lpm': None,
        'active_power_average_w': None,
        'active_power_l1_w': -1058.296,
        'active_power_l2_w': None,
        'active_power_l3_w': None,
        'active_power_w': -1058.296,
        'active_tariff': None,
        'active_voltage_l1_v': None,
        'active_voltage_l2_v': None,
        'active_voltage_l3_v': None,
        'any_power_fail_count': None,
        'external_devices': None,
        'gas_timestamp': None,
        'gas_unique_id': None,
        'long_power_fail_count': None,
        'meter_model': None,
        'monthly_power_peak_timestamp': None,
        'monthly_power_peak_w': None,
        'smr_version': None,
        'total_energy_export_kwh': 255.551,
        'total_energy_export_t1_kwh': 255.551,
        'total_energy_export_t2_kwh': None,
        'total_energy_export_t3_kwh': None,
        'total_energy_export_t4_kwh': None,
        'total_energy_import_kwh': 2.705,
        'total_energy_import_t1_kwh': 2.705,
        'total_energy_import_t2_kwh': None,
        'total_energy_import_t3_kwh': None,
        'total_energy_import_t4_kwh': None,
        'total_gas_m3': None,
        'total_liter_m3': None,
        'unique_meter_id': None,
        'voltage_sag_l1_count': None,
        'voltage_sag_l2_count': None,
        'voltage_sag_l3_count': None,
        'voltage_swell_l1_count': None,
        'voltage_swell_l2_count': None,
        'voltage_swell_l3_count': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength': 92,
      }),
      'device': dict({
        'api_version': 'v1',
        'firmware_version': '3.06',
        'product_name': 'kWh meter',
        'product_type': 'SDM230-WIFI',
        'serial': '**REDACTED**',
      }),
      'state': None,
      'system': dict({
        'cloud_enabled': True,
      }),
    }),
    'entry': dict({
      'ip_address': '**REDACTED**',
      'product_name': 'Product name',
      'product_type': 'product_type',
      'serial': '**REDACTED**',
    }),
  })
# ---
